--- a/templates/users/public_profile.html
+++ b/templates/users/public_profile.html
@@ -63,7 +63,9 @@
 
 
 <div class="sidebar-wrap">
-    <a href="{% url 'users:follow_user' userID %}">{{userID}}</a>
+    <form action="{% url 'users:follow_user' %}" method="post">
+        {{form}}{% csrf_token %} <input type="submit" value="follow">
+    </form>
 </div>
 
 
