--- a/templates/threads/index.html
+++ b/templates/threads/index.html
@@ -35,31 +35,36 @@
             {% for thread in threads %}
             <div class="thumb-content" id="thread_id_{{thread.id}}">
                 <div class="thumb-content-text">
-                    <div class="thumb-content-avatar-group-user">
-                        {% if not thread.user.customuser.avatar.url  %}
-                        <img src="{% static 'images/mario.jpg' %}" alt="" class="profile-avatar">
-                        {% else %}
-                        <img class='profile-avatar' src="{{MEDIA_URL}}{{thread.user.customuser.avatar.url}}" alt=""
-                            srcset="">
-                        {% endif %}
-                        <div class="thumb-content-group">{{thread.group}}</div>
-                        {% comment %} link to user profile {% endcomment %}
-                        <div class="thumb-content-user">Posted by u/<a
-                                href="{% url "users:public_profile" thread.user.username %}">{{thread.user}}</a>
-                            {{thread.posted_date}}
-                            {% comment %} @register simple_tags not in use {% endcomment %}
-                            {% comment %} {% HoursFrom thread.published_date %}</div> {% endcomment %}
 
+                    {% comment %} likes/dislikes {% endcomment %}
+                    <div class="likes-dislikes">
+                        <a href="{% url "threads:like_thread" thread.id %}"> Likes:
+                            {{thread.likes}} </a>
+                        <a href="{% url "threads:dislike_thread" thread.id %}"> Dislikes:{{thread.dislikes}} </a>
                     </div>
-                    <div class="thumb-content-title">{{thread.title}}</div>
-                    <div class="thumb-content-text">{{thread.text|slice:":50"}}</div>
+
+                    {% comment %} thread image {% endcomment %}
                     <div class="thumb-content-image"><img src="{{MEDIA_URL}}{{thread.image.url}}" alt="" srcset="">
                     </div>
-                </div>
-                <div class="likes-dislikes">
-                    <a href="{% url "threads:like_thread" thread.id %}"> Likes:
-                        {{thread.likes}} </a>
-                    <a href="{% url "threads:dislike_thread" thread.id %}"> Dislikes:{{thread.dislikes}} </a>
+
+                    {% comment %} thread title/user/group {% endcomment %}
+                    <div class="thumb-content-avatar-group-user-wrapper">
+                        {% comment %} flex 2 columns {% endcomment %}
+
+                        <div class="thumb-content-avatar-group-user">
+                            <div class="thumb-content-avatar"><img src="" alt="" class="group_avatar"></div>
+                            <div class="thumb-content-group">{{thread.group}}</div>
+
+                            {% comment %} link to user profile / post date information {% endcomment %}
+                            <div class="thumb-content-user">Posted by u/<a
+                                    href="{% url "users:public_profile" thread.user.username %}">{{thread.user}}</a>
+                                {{thread.posted_date}}
+                            </div>
+                            <div class="thumb-content-title">{{thread.title}}</div>
+                            <div class="thumb-content-text">{{thread.text|slice:":50"}}</div>
+
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -75,3 +80,17 @@
 
 
 {% endblock 'content' %}
+
+
+
+
+{% comment %} @register simple_tags not in use {% endcomment %}
+{% comment %} {% HoursFrom thread.published_date %}
+</div> {% endcomment %}
+
+
+{% comment %} {% if not thread.user.customuser.avatar.url  %}
+<img src="{% static 'images/mario.jpg' %}" alt="" class="profile-avatar">
+{% else %}
+<img class='profile-avatar' src="{{MEDIA_URL}}{{thread.user.customuser.avatar.url}}" alt="" srcset="">
+{% endif %} {% endcomment %}
