--- a/templates/threads/index.html
+++ b/templates/threads/index.html
@@ -77,7 +77,12 @@
 
                         </div>
                         <div class="thumb-content-subpanel-wrapper">
-                            <div>Icons: enlarge, comments, award, share, save, hide, report</div>
+                            <a href=""><img src="{% static 'images/expand.png' %}" alt="" srcset=""></a><a href=""><img
+                                    src="{% static 'images/comment.png' %}" alt="" srcset=""> Comments</a><a
+                                href=""><img src="{% static 'images/award.png' %}" alt="" srcset=""> Award</a><a
+                                href=""><img src="{% static 'images/share.png' %}" alt="" srcset=""> Share</a><a
+                                href=""><img src="{% static 'images/hide.png' %}" alt="" srcset=""> Hide</a><a
+                                href=""><img src="{% static 'images/report.png' %}" alt="" srcset=""> Report</a>
                         </div>
                     </div>
                 </div>
