--- a/templates/threads/index.html
+++ b/templates/threads/index.html
@@ -77,12 +77,18 @@
 
                         </div>
                         <div class="thumb-content-subpanel-wrapper">
-                            <a href=""><img src="{% static 'images/expand.png' %}" alt="" srcset=""></a><a href=""><img
-                                    src="{% static 'images/comment.png' %}" alt="" srcset=""> Comments</a><a
-                                href=""><img src="{% static 'images/award.png' %}" alt="" srcset=""> Award</a><a
-                                href=""><img src="{% static 'images/share.png' %}" alt="" srcset=""> Share</a><a
-                                href=""><img src="{% static 'images/hide.png' %}" alt="" srcset=""> Hide</a><a
-                                href=""><img src="{% static 'images/report.png' %}" alt="" srcset=""> Report</a>
+                            <a href="" class='subicon-href'><img class='subicons' src="{% static 'images/expand.png' %}"
+                                    alt="" srcset=""></a>
+                            <a href="" class='subicon-href'><img class='subicons'
+                                    src="{% static 'images/comment.png' %}" alt="" srcset=""> Comments</a>
+                            <a href="" class='subicon-href'><img class='subicons' src="{% static 'images/award.png' %}"
+                                    alt="" srcset=""> Award</a>
+                            <a href="" class='subicon-href'><img class='subicons' src="{% static 'images/share.png' %}"
+                                    alt="" srcset=""> Share</a>
+                            <a href="" class='subicon-href'><img class='subicons' src="{% static 'images/hide.png' %}"
+                                    alt="" srcset=""> Hide</a>
+                            <a href="" class='subicon-href'><img class='subicons' src="{% static 'images/flag.png' %}"
+                                    alt="" srcset=""> Report</a>
                         </div>
                     </div>
                 </div>
