--- a/templates/threads/index.html
+++ b/templates/threads/index.html
@@ -19,8 +19,7 @@
                 <img src="{{MEDIA_URL}}{{user.customuser.avatar.url}}" alt="" class="profile-avatar">
                 {% endif %}
             </a>
-            <h1></h1>
-            <a href="{% url 'threads:create_thread' %}"><input type="text" name="" id=""
+            <a href="{% url 'threads:create_thread' %}"><input type="text" name="" id="create_post"
                     placeholder='Create Thread'></a>
         </div>
         <div>
