--- a/templates/base.html
+++ b/templates/base.html
@@ -27,26 +27,38 @@
 
 <body>
     <div class="nav-wrapper">
+
         <div class="home-link-wrap">
             <a href="{% url "threads:index" %}">
                 <img src="" alt="Pipeline" srcset="">
             </a>
         </div>
+
         <div class="profile-only" id='personal-dropdown-wrap'>
-            Drop Down Menu
+            <div class='dropdown-icons' id="dropdown-icon_1">
+                <img src="{% static 'images/home.png'%}" alt="" srcset="">
+                <h4>Home</h4>
+            </div>
+
+            <div class='dropdown-arrow' id="dropdown-icon_2">
+                <img src="{% static 'images/down-expand.png' %}" alt="" srcset="" id='dropdown-icon_2'>
+            </div>
         </div>
+
         <div class="search-wrap">
             <img src="{% static "images/SearchMag.png" %}" alt="" srcset="" id="maglens">
             <input type=" search" name="" id="search" placeholder='Search'>
         </div>
+
+
         <div class="quick-link-wrap">
             {% comment %} load index page by preferred sorting {% endcomment %}
-            <a href="{% url 'threads:index' %}" class=''><img src="{% static 'images/popular.png' %}" id=""
-                    alt="Popular" srcset=""></a>
-            <a href="{% url 'threads:index' %}" class=''><img src="{% static 'images/all.png' %}" id="" alt="All"
-                    srcset=""></a>
-            <a href="{% url 'threads:index' %}" class=''><img src="{% static 'images/new.png' %}" id="" alt="New"
-                    srcset=""></a>
+            <a href="{% url 'threads:index' %}" class=''><img class="quick-link-icons"
+                    src="{% static 'images/popular.png' %}" id="" alt="Popular" srcset=""></a>
+            <a href="{% url 'threads:index' %}" class=''><img class="quick-link-icons"
+                    src="{% static 'images/all.png' %}" id="" alt="All" srcset=""></a>
+            <a href="{% url 'threads:index' %}" class=''><img class="quick-link-icons"
+                    src="{% static 'images/new.png' %}" id="" alt="New" srcset=""></a>
         </div>
         {% if user.is_authenticated %}
         {% else %}
