--- a/templates/threads/index.html
+++ b/templates/threads/index.html
@@ -57,7 +57,7 @@
                             <div class="thumb-content-title">{{thread.title}}</div>
 
                             <div class="thumb-group-user-wrapper">
-                                <div class="thumb-content-avatar"><img src="{% static 'images/mario.jpg' %}" alt=""
+                                <div class="thumb-content-avatar"><img src="{% static 'images/mario.png' %}" alt=""
                                         class="group_avatar"></div>
                                 <div class="thumb-content-group"><a href="">p/{{thread.group}}</a> *</div>
                                 {% comment %} link to user profile / post date information {% endcomment %}
