--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,9 @@
 
         <div class="home-link-wrap">
             <a href="{% url "threads:index" %}">
-                <img src="" alt="Pipeline" srcset="">
+                <img src="{% static 'images/mario.png' %}" alt="Pipeline" id='pipeline-icon_1' srcset="">
+                <img src="{% static 'images/pipeline.png' %}" alt="Pipeline" id='pipeline-icon_2' srcset="">
+
             </a>
         </div>
 
