--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{% static 'CSS/styles.css' %}">
 
     {% comment %} JQuery for el_pagination_tags {% endcomment %}
-    <script src="jquery-3.6.0.min.js"></script>
+    {% comment %} <script src="jquery-3.6.0.min.js"></script> {% endcomment %}
 
     {% block "title" %} {% endblock "title" %}
     {% comment %} enables features only allowed for user's that are logged in {% endcomment %}
